--- a/FA.JustBlog/Views/Shared/_Layout.cshtml
+++ b/FA.JustBlog/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
     <div class="container mt-3">
         @RenderBody()
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="text/javascript" src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.7/js/select2.min.js"></script>
     <script type="text/javascript" src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
